--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -5,6 +5,6 @@
       <i class="fa fa-play" aria-hidden="true"></i>
       Show table
     </button>
-    <input class="" type="checkbox" [(ngModel)]="rememberToken" value=""> Auto-Fix goto
+    <input class="" type="checkbox" [(ngModel)]="autoFix" value=""> Auto-Fix goto
   </div>
 </div>
