Add basic functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,23 +14,25 @@
   </div>
   <br> Possible statements:
   <br>
-  <code>Ri := k</code>
+  <code>ARGS ...</code>
   <br>
-  <code>Ri := Rj</code>
+  <code>n Ri := k</code>
   <br>
-  <code>RRi := Rj</code>
+  <code>n Ri := Rj</code>
   <br>
-  <code>Ri := RRj</code>
+  <code>n RRi := Rj</code>
   <br>
-  <code>Ri := Rj + Rk</code>
+  <code>n Ri := RRj</code>
   <br>
-  <code>Ri := Rj - Rk</code>
+  <code>n Ri := Rj + Rk</code>
   <br>
-  <code>GOTO m</code>
+  <code>n Ri := Rj - Rk</code>
   <br>
-  <code>IF Ri = 0 GOTO m</code>
+  <code>n GOTO m</code>
   <br>
-  <code>IF Ri > 0 GOTO m</code>
+  <code>n IF Ri = 0 GOTO m</code>
+  <br>
+  <code>n IF Ri > 0 GOTO m</code>
   <br>
   <hr>
   <a href="https://github.com/simonmeusel/raacma-source/issues" class="btn btn-outline-secondary mb-1">
