--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -1,6 +1,1 @@
-<div>
-  Arguments:
-  <input type="text" class="form-control">
-  <br> Program:
-  <textarea class="form-control"></textarea>
-</div>
+<textarea #program (change)="onChange()" (keyup)="onChange($event)" [(ngModel)]="data.text" class="form-control"></textarea>
