Add missing commands

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,8 @@
   <br>
   <code>n IF Ri > 0 GOTO m</code>
   <br>
+  <code>n STOP</code>
+  <br>
   <hr>
   <a href="https://github.com/simonmeusel/raacma-source/issues" class="btn btn-outline-secondary mb-1">
     Submit a issue
